INCLUDES = -I$(top_builddir) -I$(includedir)
lib_LTLIBRARIES=libCppLogger.la
libCppLogger_la_SOURCES=LogManager.cpp \
	 SysLogger.cpp SysLogger.hpp \
	 Logger.hpp \
	 CPPStream.cpp CPPStream.hpp \
	 CStream.cpp CStream.hpp \
	 RawStream.cpp RawStream.hpp \
	 AbstractStream.cpp AbstractStream.hpp 
nobase_include_HEADERS=Logger.hpp LogManager.hpp
#bin_PROGRAMS=demoApp
#demoApp_SOURCES=demoApp.cpp
